fix loading message spill-over

--- a/src/features/embedYoutube/embedYoutubeStyles.css
+++ b/src/features/embedYoutube/embedYoutubeStyles.css
@@ -6,6 +6,7 @@
 .iframe {
     width: 100%;
     aspect-ratio: 16 / 9;
+    display: block;
 }
 
 @supports not (aspect-ratio: 1) {
